tests/ui/tokio_spawn.stderr
error: nondeterministic workflow API detected; use durust::spawn or durust::join! instead
 --> tests/ui/tokio_spawn.rs:5:10
  |
5 | async fn bad(_: BadInput) -> durust::Result<()> {
  |          ^^^
